manifests/k8s-resources-101/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ...
spec:
  selector:
    matchLabels:
      ...
  template:
    metadata:
      labels:
        ...
    spec:
      containers:
      ...
