manifests/k8s-resources-101/02-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ...
spec:
  selector:
    ...
  ports:
  ...
