manifests/k8s-resources-101/03-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: redis-<shortname>
  annotations:
    kubernetes.io/ingress.class: skipper
spec:
  rules:
  - host: redis-<shortname>.mis.inf.fh-rosenheim.de
    http:
      paths:
      - path: /
        backend:
          serviceName: redis-<shortname>
          servicePort: 8081
